# CraftMeter

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  Package.swift  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
Sources/: CLAUDE.md
Sources/CraftMeterApp/: App.swift  SettingsView.swift  StatsView.swift  ViewModel.swift
Sources/CraftMeterCore/: Domain.swift  Format.swift  Store.swift
Sources/OhMyUsage/: CLAUDE.md
Sources/OhMyUsageApplication/: BackoffPolicy.swift  CLAUDE.md  InactiveProfileRefreshPlanner.swift  ModelPricing.swift  OhMyUsageApplicationModule.swift  ProviderRefreshScheduler.swift  RefreshUseCaseContracts.swift  RuntimeDiagnostics.swift  UsageAnalyticsAggregator.swift  UsageAnalyticsEventStoreTypes.swift  UsageAnalyticsSnapshotCacheStore.swift  UsageAnalyticsTypes.swift  VisibleClockController.swift
Sources/OhMyUsageBootstrap/: CLAUDE.md  OhMyUsageBootstrapModule.swift  OhMyUsageCompositionRoot.swift
Sources/OhMyUsageDomain/: AuthModels.swift  CLAUDE.md  OfficialProviderConfigModels.swift  (+9 more)
docs/: ARCHITECTURE.md  DOWNLOAD.md  EXTENDING.md  L2-app.md  L2-cli.md  L2-components.md  L2-core.md  OPTIMIZATION_NOTES.md  PROVIDERS.md  README.en.md  RELEASE.md  RELEASE_CHECKLIST.md
scripts/: generate_dmg_install_card.swift  package_dmg.sh
src/: App.tsx  charts.tsx  data.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: dump.rs
src-tauri/icons/: icon.icns
src-tauri/src/: codex.rs  lib.rs  main.rs  model.rs  parser.rs  pricing.rs  store.rs
(+517 files in other folders)
